# symbiotic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README  README.md  build.sh  copy_from_image.sh  sbt-instrumentation.LICENSE.txt  sbt-slowbeast.LICENSE.txt  symbiotic  symbiotic-build.sh  system-build.sh
lib/: CMakeLists.txt  __VERIFIER_assert.c  __VERIFIER_calloc.c  __VERIFIER_calloc0.c  __VERIFIER_error.c  __VERIFIER_malloc.c  __VERIFIER_nondet_U16.c  __VERIFIER_nondet_U8.c  __VERIFIER_nondet_bool.c  __VERIFIER_nondet_float.c  __VERIFIER_nondet_long.c  __VERIFIER_nondet_u8.c  __VERIFIER_nondet_uchar.c  __VERIFIER_nondet_uint.c  __VERIFIER_nondet_unsigned.c  __VERIFIER_nondet_ushort.c  __kmalloc.c  __memcpy.c  kfree.c  kzalloc.c
lib/kernel/: __kfree.c  __kmalloc.c  __memset.c  _ctype.c  kmalloc.c  kzalloc.c
lib/libc/: atexit.c  atoi.c  fflush.c  getenv.c  localtime.c  memalloc.c  strchr.c  strcpy.c  strcspn.c  strerror.c  strftime.c  strlen.c  strtod.c  strtoul.c  strtoull.c  time.c
lib/libc/klee/: __errno_location.c  atexit.c  atoi.c  fflush.c  fgetc.c  getenv.c  localtime.c  memchr.c  memrchr.c  mktime.c  puts.c  strcmp.c  strerror.c  strftime.c  strtod.c  strtoull.c  time.c
lib/libc/legacy/: __errno_location.c  memcpy.c  memmove.c  strtoul.c
lib/libc/svcomp/: ferror.c  fgetc.c  getenv.c  getopt.c  getopt_long.c  qsort.c  setjmp.c  strrchr.c  strtod.c  strtok.c  strtoul.c  time.c  vasprintf.c
lib/libc/witch-klee/: abs.c  fflush.c  iswxdigit.c  memalloc.c  memcmp.c  puts.c  sqrt.c  strncmp.c  strncpy.c  strspn.c
lib/posix/: __ctype_b_loc.c  htonl.c  htons.c  memchr.c  memcmp.c  memmove.c  memrchr.c  ntohl.c  ntohs.c  strdup.c  strncmp.c  strrchr.c  strtod.c
lib/svcomp/: __VERIFIER_assume.c
lib/svcomp/divine/: __symbiotic_atomic_begin.c  __symbiotic_atomic_end.c
lib/svcomp/klee/: __VERIFIER_nondet_bool_named.c  __VERIFIER_nondet_int_named.c  __VERIFIER_nondet_long_named.c  __VERIFIER_nondet_pchar_named.c  __VERIFIER_nondet_sector_t_named.c  __VERIFIER_nondet_ulong_named.c
lib/svcomp/nidhugg/: __VERIFIER_atomic_begin.c  __VERIFIER_atomic_end.c  __VERIFIER_nondet_bool.c  __symbiotic_global_lock.c  abort.c
lib/symbioticpy/benchexec/: util.py
lib/symbioticpy/symbiotic/: __init__.py  environment.py  exceptions.py  filetransform.py  includepaths.py  integritycheck.py  optimizations.py  options.py  property.py  runtime.py  symbiotic.py  transform.py  verifier.py
lib/verifier/: __INSTR_check_assume.c  __INSTR_check_nontermination.c  __INSTR_fail.c  __VERIFIER_assert.c  __VERIFIER_assume.c  __VERIFIER_calloc.c  __VERIFIER_calloc0.c  __VERIFIER_error.c  __VERIFIER_exit.c  __VERIFIER_make_symbolic.c  __VERIFIER_malloc.c  __VERIFIER_malloc0.c  __VERIFIER_nondet_U16.c  __VERIFIER_nondet_U32.c  __VERIFIER_nondet__Bool.c  __VERIFIER_nondet__Bool_named.c  __VERIFIER_nondet_bool.c  __VERIFIER_nondet_char.c  __VERIFIER_nondet_double.c  __VERIFIER_nondet_double_named.c  __VERIFIER_nondet_float.c  __VERIFIER_nondet_float_named.c  __VERIFIER_nondet_int.c  __VERIFIER_nondet_long.c  __VERIFIER_nondet_pchar.c  __VERIFIER_nondet_pointer.c  __VERIFIER_nondet_pointer_named.c  __VERIFIER_nondet_sector_t.c  __VERIFIER_nondet_short.c  __VERIFIER_nondet_size_t.c  __VERIFIER_nondet_u16.c  __VERIFIER_nondet_u32.c  __VERIFIER_nondet_u8.c  __VERIFIER_nondet_uchar_named.c  __VERIFIER_nondet_ulong.c  __VERIFIER_nondet_unsigned_named.c  __VERIFIER_nondet_ushort.c  __VERIFIER_silent_exit.c
lib/verifier/ikos/: __VERIFIER_error.c
lib/verifier/klee/: __VERIFIER_calloc.c  __VERIFIER_calloc0.c  __VERIFIER_malloc.c  __VERIFIER_malloc0.c  __VERIFIER_nondet_U8.c  __VERIFIER_nondet_double.c  __VERIFIER_nondet_double_named.c  __VERIFIER_nondet_float.c  __VERIFIER_nondet_float_named.c  __VERIFIER_nondet_loff_t.c  __VERIFIER_nondet_loff_t_named.c  __VERIFIER_nondet_short.c  __VERIFIER_nondet_size_t.c  (+9 more)
lib/verifier/klee-mainstream/: __VERIFIER_assume.c  __VERIFIER_calloc.c  __VERIFIER_calloc0.c  __VERIFIER_make_nondet.c  __VERIFIER_malloc0.c  __VERIFIER_nondet_U16.c  __VERIFIER_nondet_U32.c  __VERIFIER_nondet_U8.c  __VERIFIER_nondet__Bool.c  __VERIFIER_nondet__Bool_named.c  __VERIFIER_nondet_bool.c  __VERIFIER_nondet_bool_named.c  __VERIFIER_nondet_char.c  __VERIFIER_nondet_char_named.c  __VERIFIER_nondet_double.c  __VERIFIER_nondet_double_named.c  __VERIFIER_nondet_float.c  __VERIFIER_nondet_float_named.c  __VERIFIER_nondet_int.c  __VERIFIER_nondet_int_named.c  __VERIFIER_nondet_loff_t.c  __VERIFIER_nondet_loff_t_named.c  __VERIFIER_nondet_long.c  __VERIFIER_nondet_long_named.c  __VERIFIER_nondet_pchar.c  __VERIFIER_nondet_pchar_named.c  __VERIFIER_nondet_pointer.c  __VERIFIER_nondet_pointer_named.c  __VERIFIER_nondet_sector_t.c  __VERIFIER_nondet_sector_t_named.c  __VERIFIER_nondet_short.c  __VERIFIER_nondet_short_named.c  __VERIFIER_nondet_size_t.c  __VERIFIER_nondet_size_t_named.c  __VERIFIER_nondet_u16.c  __VERIFIER_nondet_u32.c  __VERIFIER_nondet_u32_named.c  __VERIFIER_nondet_u8.c  __VERIFIER_nondet_uchar.c  __VERIFIER_nondet_uchar_named.c  (+8 more)
src/: BreakInfiniteLoops.cpp  CMakeLists.txt  CheckUnsupported.cpp  CountInstr.cpp  DeleteUndefined.cpp  FindInit.cpp  InitializeUninitialized.cpp  InstrumentAlloc.cpp  Prepare.cpp  RemoveInfiniteLoops.cpp  RemoveReadOnlyAttr.cpp  RenameVerifierFuns.cpp  ReplaceUBSan.cpp
transforms/: AInliner.cpp  BreakCritLoops.cpp  BreakInfiniteLoops.cpp  CMakeLists.txt  CheckModule.cpp  CheckUnsupported.cpp  ClassifyInstructions.cpp  ClassifyLoops.cpp  CloneMetadata.cpp  ConstantProp.cpp  DeleteCalls.cpp  DeleteUndefined.cpp  DummyMarker.cpp  ExplicitConsdes.cpp  FindExits.cpp  FlattenLoops.cpp  GetTestTargets.cpp  InitializeUninitialized.cpp  InstrumentAlloc.cpp  InstrumentNontermination.cpp  InternalizeGlobals.cpp  MakeNondet.cpp  MarkVolatile.cpp  Prepare.cpp  PrepareOverflows.cpp  RemoveConstantExprs.cpp  RemoveErrorCalls.cpp  RemoveInfiniteLoops.cpp  RemoveReadOnlyAttr.cpp  RenameVerifierFuns.cpp  ReplaceAsserts.cpp  ReplaceLifetimeMarkers.cpp  ReplaceUBSan.cpp  ReplaceVerifierAtomic.cpp  ReplaceVerifierFuns.cpp  Unrolling.cpp
(+179 files in other folders)
